<resources>
    <string name="app_name">WordList</string>
    <string name="type_here">Type Here</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="add_entry">Add Entry</string>
    <string name="undo_delete">Undo Delete</string>
    <string name="save_list">Save List</string>
    <string name="clear_field">Clear Field</string>
    <string name="clear_list">Clear List</string>
    <string name="todo">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="type_entry_here">Type entry here</string>
    <string name="txtLabel">Add entry</string>
    <string name="app_label">app_label</string>
    <string name="search_hint">Search word entries</string>
    <string name="textview">TextView</string>
    <string name="combines_old_wordlist_with_new_wordlist">Combines old WordList with new WordList</string>
    <string name="oldListMessage">Are you sure you want to retrive old words?</string>
    <string name="enter_name_of_entry">Enter name of entry</string>
    <string name="enter_type_of_entry">Enter type of entry</string>
    <string name="enter_meaning_of_entry">Enter meaning of entry</string>
    <string name="up_button_message">Sends to top of page</string>
    <string name="get_official_definition">Get official definition</string>
    <string name="send">Send</string>
    <string name="import_button">Import</string>
</resources>