<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtWordName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:hint="@string/enter_name_of_entry"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textCursorDrawable="@null"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtWordType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:hint="@string/enter_type_of_entry"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textCursorDrawable="@null"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtWordMeaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:hint="@string/enter_meaning_of_entry"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textCursorDrawable="@null"
        android:autofillHints=""
        android:inputType="textMultiLine" />
</LinearLayout>