<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="top"
    app:layout_scrollFlags="scroll"
    android:id="@+id/coordinatorLayout">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnOldList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:clickable="true"
        android:contentDescription="@string/combines_old_wordlist_with_new_wordlist"
        android:focusable="true"
        android:onClick="retrieveOldListDialog"
        app:srcCompat="@android:drawable/ic_menu_recent_history"
        tools:ignore="OnClick"
        android:layout_margin="16dp"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="192dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00B1BF"
            app:collapsedTitleTextAppearance="@style/ToolbarTitleTextCollapsed"
            app:contentScrim="?attr/colorAccent"
            app:expandedTitleTextAppearance="@style/ToolbarTitleText"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:title="WordList"
            app:toolbarId="@+id/toolbar">

            <SearchView
                android:id="@+id/wordSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="pin"
                android:background="#00B1BF" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#303030"
        android:id="@+id/scrollView"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:ignore="InvalidId">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/wordListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="#00B1BF"
        android:contentDescription="@string/add_entry"
        android:onClick="openAddWordDialog"
        android:src="@android:drawable/ic_input_add"
        android:tint="#303030" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#00B1BF"
        android:clickable="true"
        android:contentDescription="@string/undo_delete"
        android:focusable="true"
        android:onClick="UndoAction"
        android:tint="#303030"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/arrow_up_float"
        android:focusable="true"
        android:contentDescription="@string/up_button_message"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="80dp"
        android:onClick="sendToTop"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>